# hms

./: .env.example  .gitignore  DATABASE.md  ENQUIRY_SETUP.md  README.md  add_rls_policies.sql  index.html  package-lock.json  package.json  sample_data.sql  schema.sql  setup_supabase.sql  tsconfig.node.json
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/: supabase.ts
src/lib/components/Auth/: LoginForm.svelte
src/lib/components/Billing/: BillingManagement.svelte
src/lib/components/Dashboard/: DashboardStats.svelte
src/lib/components/Laboratory/: LaboratoryManagement.svelte
src/lib/components/Layout/: Header.svelte  Sidebar.svelte
src/lib/components/Patients/: AdmissionForm.svelte  AppointmentBooking.svelte  DischargeForm.svelte  EnquiryForm.svelte  EnquiryManagement.svelte  NewEnquiryModal.svelte  PatientList.svelte  PatientRegistration.svelte  PatientRegistrationModal.svelte
src/lib/components/Pharmacy/: PharmacyManagement.svelte
src/lib/components/Rooms/: RoomManagement.svelte
src/lib/stores/: auth.ts  navigation.ts
src/lib/types/: database.ts
src/routes/: patient-journey.svelte
